<resources>
    <string name="app_name">Lat01TiketSaya</string>
    <string name="wisata_jadi_lebih_asyik">Wisata Jadi Lebih Asyik!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="text_continue">Continue</string>
    <string name="text_explore_now">EXPLORE NOW</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="create_new_account">Create New Account</string>
    <string name="kamu_hebat">Kamu Hebat</string>
    <string name="desc_kamu_hebat">Selamat datang pada TiketSaya \ndan nikmati wisatamu</string>
    <string name="desc_anda_berhasil">Anda berhasil membeli tiket\ndan selamat berlibur</string>
    <string name="desc_create_new_account">Let the world knows yourself \nmore better and ever</string>
    <string name="desc_selfie_time">Please fill up the forms below \nfor informations</string>
    <string name="desc_edit_profile">We highly suggest you to\nuse the correct informations</string>
    <string name="selfi_time">Selfi Time</string>
    <string name="my_dasboard">My Dashboard</string>
    <string name="name_label">Name</string>
    <string name="bio_label">Bio</string>
    <string name="traveller">Traveller</string>
    <string name="main_menus">Main Menus</string>
    <string name="pisa">Pisa</string>
    <string name="torri">Torri</string>
    <string name="pagoda">pagoda</string>
    <string name="candi">Candi</string>
    <string name="sphinx">Sphinx</string>
    <string name="monas">Monas</string>
    <string name="ticket_tips">Ticket Tips</string>
    <string name="learn_it_for_many_benefits">Learn it for many benefits</string>
    <string name="menara_pisa">Menara Pisa</string>
    <string name="information">Information</string>
    <string name="wifi_available">WIFI Available</string>
    <string name="connect_for_any_tourist">Connect for any tourist</string>
    <string name="_13_festivals">13 Festivals</string>
    <string name="dance_and_foods">Dance and foods</string>
    <string name="desc_ticket_detail">The leaning of the Tower of Pisa comes into the story in 1173, when construction began.</string>
    <string name="desc_buy_ticket_detail">Anak yang berumur lebih dari 3 tahun wajib membeli tiket.</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="pisa_city_italy">Pisa City, Italy</string>
    <string name="pricing">Pricing</string>
    <string name="pay_now">PAY NOW</string>
    <string name="selamat_menikmati">Selamat Menikmati</string>
    <string name="view_tickets">VIEW TICKETS</string>
    <string name="zerky_yulyandri">Zerky Yulyandri</string>
    <string name="my_dashboard">MY DASHBOARD</string>
    <string name="sign_out">SIGN OUT</string>
</resources>
