<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueThird"
    tools:context=".SuccesBuyTicketAct">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="35dp">

            <ImageView
                android:id="@+id/icon_succes"
                android:layout_width="286dp"
                android:layout_height="330dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/icon_success_ticket"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nama_lengkap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:fontFamily="@font/mregular"
                android:text="@string/selamat_menikmati"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_succes" />

            <TextView
                android:id="@+id/please_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mlight"
                android:text="@string/desc_kamu_hebat"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/nama_lengkap"
                app:layout_constraintStart_toStartOf="@+id/nama_lengkap"
                app:layout_constraintTop_toBottomOf="@+id/nama_lengkap" />

            <Button
                android:id="@+id/btn_view_ticket"
                style="@style/btnBluePrimary"
                android:layout_marginStart="48dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="48dp"
                android:text="@string/view_tickets"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/please_fill" />

            <Button
                android:id="@+id/btn_my_dashboard"
                style="@style/btnWhitePrimary"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:text="@string/my_dashboard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_view_ticket" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>