<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueThird"
    tools:context=".SuccesRegisterAct">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="35dp">

            <ImageView
                android:id="@+id/icon_succes"
                android:layout_width="286dp"
                android:layout_height="330dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/icon_success_signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/xname_lengkap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:fontFamily="@font/mregular"
                android:text="@string/kamu_hebat"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_succes" />

            <TextView
                android:id="@+id/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mlight"
                android:text="@string/desc_kamu_hebat"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/xname_lengkap"
                app:layout_constraintStart_toStartOf="@+id/xname_lengkap"
                app:layout_constraintTop_toBottomOf="@+id/xname_lengkap" />

            <Button
                android:id="@+id/btn_explore"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/bg_btn_blue_primary"
                android:fontFamily="@font/mmedium"
                android:text="@string/text_explore_now"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bio" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>